fix the test fanctionnl in the  UserController  CompliteProfile